# omni_visual_odometry

./: CMakeLists.txt  README.md  package.xml
basic_rgbd_visual_odometry/config/: astra_camera.yaml  kinect_camera.yaml  rgbd_camera.yaml
basic_rgbd_visual_odometry/include/: visual_odometry.h  visual_odometry_helpers.h
basic_rgbd_visual_odometry/src/: visual_odometry.cpp  visual_odometry_helpers.cpp
include/omni_visual_odometry/: RGBDVisualOdometryNode.h
launch/: omni_visual_odometry.launch  recording.launch  summit_visual_odometry.launch
src/: RGBDVisualOdometryNode.cpp
